<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <include layout="@layout/content_travel" />

    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trip_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/space_16"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/trip_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_info_details"
            android:hint="@string/trip_name_hint"
            android:inputType="text"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/destination"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/space_16"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_card_travel_black_24dp"
            android:hint="@string/destination"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trip_type"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/City_Break"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_break"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/See_Side"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_side"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/Mountain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mountain"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_eur"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="1000"
            android:progress="10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Start Date"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center"
                    android:onClick="btnDatePickerOnClickStart"
                    android:inputType="date"
                    android:text="DD/MM/YYYY"
                    tools:ignore="OnClick" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="End Date"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center"
                    android:onClick="btnDatePickerOnClickEnd"
                    android:inputType="date"
                    android:text="DD/MM/YYYY"
                    tools:ignore="OnClick" />
            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gallery_photo"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/select_photo_gallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="btnTakePhotoGallery"
                    android:gravity="left|center"
                    android:text="@string/select" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/camera_photo"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/select_photo_camera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center"
                    android:text="@string/select" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/rating"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />


                <RatingBar
                    android:id="@+id/rate_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:rating="1"
                    android:stepSize="0.5" />
            </LinearLayout>
            <Button
                android:id="@+id/button_save"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:text="@string/save" />
        </LinearLayout>
        <ImageView
            android:id="@+id/imageview_taken"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="w,16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>